# GigSheild

./: .env.template  .gitignore  CODEX.md  README.md  docker-compose.yml  index.html  package-lock.json  package.json  render.yaml  tsconfig.app.tsbuildinfo
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  render-start.sh
backend/alembic/: README  env.py
backend/alembic/versions/: 20260311_0001_create_workers_and_policies.py  20260311_0002_create_disruptions_claims_and_payouts.py  20260311_0003_create_auth_and_fraud_tables.py  20260311_0004_create_plausibility_assessments.py  20260311_0005_add_device_fingerprint_and_zone_observations.py  20260321_0006_add_payments_security_and_payout_profiles.py
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  config.py  security.py  time.py
backend/app/db/: base.py  init.py  session.py
backend/app/models/: __init__.py  auth_session.py  claim.py  disruption_event.py  enums.py  fraud_log.py  otp_challenge.py  payout.py  plausibility_assessment.py  policy.py  policy_payment.py  webhook_event.py  worker.py  worker_zone_observation.py
backend/app/repositories/: __init__.py  auth.py  claims.py  disruptions.py  fraud_logs.py  payouts.py  plausibility_assessments.py  policies.py  workers.py  (+3 more)
backend/gigshield_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: run_weekly_maintenance.py  seed_demo.py
backend/tests/: test_auth_and_admin.py  test_claim_automation.py  test_health.py  test_plausibility_assessment.py  test_policy_flow.py  test_premium.py  test_trust_score.py
(+62 files in other folders)
